<resources>
    <string name="app_name">Control de Obra</string>
    <string name="action_settings">Settings</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings of login -->
    <string name="lema_depsa">&quot;Creemos que El Hogar es la base Fundamental para construir una sociedad.&quot;</string>
    <string name="tv_username">Nombre de usuario:</string>
    <string name="tv_password">Clave:</string>
    <string name="btn_entrar">Entrar</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- strings of entrega materiales activity -->
    <string name="btn_proyecto">Proyecto</string>
    <string name="btn_modelo">Modelo</string>
    <string name="btn_obra">Obra</string>
    <string name="btn_actividad">Actividad</string>
    <string name="btn_tarea">Corte</string>
    <string name="btn_select_all">Seleccionar todos</string>
    <string name="table_title">Estado de material</string>
    <string name="count_title">Cantidad/Unidad</string>
    <string name="dialog_title_entrega">Entrega de equipos?</string>
    <string name="btn_entrega">Entregar</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="escaner_load_text">Obteniendo datos &#8230;</string>
    <string name="btn_justificacion">Justificación</string>
    <string name="title_activity_encabezado_solictud">EncabezadoSolictudActivity</string>
    <string name="title_activity_detalle_solicitud">DetalleSolicitudActivity</string>

</resources>
