<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.depsa.controldeobra.ui.EntregaMaterialesActivity">

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_depsa" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"
        tools:layout_editor_absoluteY="85dp"
        tools:layout_editor_absoluteX="0dp" />


    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutOptions"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include android:id="@+id/headearOption" layout="@layout/layout_menu_items" />

                    <Button
                        android:id="@+id/btnProyecto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/custom_options_button"
                        android:drawableEnd="@drawable/ic_next"
                        android:padding="10dp"
                        android:text="@string/btn_proyecto" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnModelo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_options_button"
                            android:drawableEnd="@drawable/ic_next"
                            android:padding="10dp"
                            android:text="@string/btn_modelo" />


                        <Button
                            android:id="@+id/btnObra"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_options_button"
                            android:drawableEnd="@drawable/ic_next"
                            android:padding="10dp"
                            android:text="@string/btn_obra" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnActividad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/custom_options_button"
                        android:drawableEnd="@drawable/ic_next"
                        android:padding="10dp"
                        android:text="@string/btn_actividad" />

                <Button
                    android:id="@+id/btnTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:drawableEnd="@drawable/ic_next"
                    android:background="@drawable/custom_options_button"
                    android:padding="10dp"
                    android:text="@string/btn_tarea" />

            </LinearLayout>


                <Button
                    android:id="@+id/btnSiguiente"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:drawableEnd="@drawable/ic_next"
                    android:background="@drawable/custom_options_button"
                    android:padding="10dp"
                    android:text="@string/btn_siguiente" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
